--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -7,6 +7,9 @@
     {% block extra-css %}{% endblock extra-css %}
 </head>
 <body>
+    {% if user.is_authenticated %}
+        {% include "partials/navbar.html" %}
+    {% endif %}
     {% block content %}{% endblock content %}
     {% block extra-js %}{% endblock extra-js %}
 </body>
