--- a/apps/jobs/templates/jobs/job_list.html
+++ b/apps/jobs/templates/jobs/job_list.html
@@ -15,9 +15,32 @@
 
         <ul>
             {% for job in jobs %}
-                <li>{{ job }} - <a href="{% url 'jobs:update' job.pk %}">Update</a></li>
+                <li>
+                    {{ job }}
+                    {% if job.user == user %}
+                        - <a href="{% url 'jobs:update' job.pk %}">Update</a>
+                    {% endif %}
+                </li>
             {% endfor %}
         </ul>
+
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; {% trans "first" %}</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">{% trans "previous" %}</a>
+                {% endif %}
+        
+                <span class="current">
+                    {% trans "Page" %} {{ page_obj.number }} {% trans "of" %} {{ page_obj.paginator.num_pages }}.
+                </span>
+        
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">{% trans "next" %}</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">{% trans "last" %} &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
     </div>
 
 {% endblock content %}
