--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %} • DJoboard</title>
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
     {% block extra-css %}{% endblock extra-css %}
 </head>
 <body>
